--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@ License: You must have a valid license purchased only from themeforest(the above
 <script src="./assets/global/plugins/angularjs/plugins/angular-ui-router.min.js" type="text/javascript"></script>
 <script src="./assets/global/plugins/angularjs/plugins/ocLazyLoad.min.js" type="text/javascript"></script>
 <script src="./assets/global/plugins/angularjs/plugins/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
-<script src="./assets/global/plugins/angularjs/plugins/angular-file-upload/angular-file-upload.min.js"></script>
+
+<!--<script src="./assets/global/plugins/angularjs/plugins/angular-file-upload/angular-file-upload.min.js"></script>-->
 
 <!-- END CORE ANGULARJS PLUGINS -->
 
