--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 <script src="./views/login/login.controller.js"></script>
 <script src="./views/home/home.controller.js"></script>
-<script src='js/controllers/DashboardController.js'type="text/javascript"></script>
+<script src='./js/controllers/DashboardController.js'type="text/javascript"></script>
 <script src='./views/currency/currency.controller.js' type="text/javascript"></script>
 <script src='./views/rate/rate.controller.js' type="text/javascript"></script>
 <script src='./views/pecahan/pecahan.controller.js' type="text/javascript"></script>
