--- a/assets/tpl/header.html
+++ b/assets/tpl/header.html
@@ -74,6 +74,11 @@
 												<h3>Master</h3>
 											</li>
 											<li>
+												<a ui-sref="home.nasabah" class="iconify">
+													<i class="icon-puzzle"></i>
+													Nasabah</a>
+											</li>
+											<li>
 												<a ui-sref="home.currency" class="iconify">
 													<i class="icon-puzzle"></i>
 													Mata Uang </a>
@@ -102,23 +107,53 @@
 										</ul>
 									</div>
 									<div class="col-md-6">
+									<ul class="mega-menu-submenu">
+										<li>
+											<h3>Transaksi</h3>
+										</li>
+										<li>
+											<a ui-sref="home.transaksi" class="iconify">
+												<i class="icon-cursor-move"></i>
+												Jual / Beli Uang Asing </a>
+										</li>
+										<li>
+											<a href="#" class="iconify">
+												<i class="icon-cursor-move"></i>
+												Jurnal </a>
+										</li>
+
+									</ul>
+								</div>
+
+								</div>
+							</div>
+						</li>
+					</ul>
+				</li>
+				<li class="menu-dropdown mega-menu-dropdown ">
+					<a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="#" class="dropdown-toggle">
+						Laporan <i class="fa fa-angle-down"></i>
+					</a>
+					<ul class="dropdown-menu" style="min-width: 410px">
+						<li>
+							<div class="mega-menu-content">
+								<div class="row">
+									<div class="col-md-6">
 										<ul class="mega-menu-submenu">
 											<li>
-												<h3>Transaksi</h3>
+												<h3>Operasional</h3>
 											</li>
 											<li>
-												<a ui-sref="home.transaksi" class="iconify">
-													<i class="icon-cursor-move"></i>
-													Jual / Beli Uang Asing </a>
+												<a ui-sref="home.rstok" class="iconify">
+													<i class="icon-puzzle"></i>
+													Stok </a>
 											</li>
-											<li>
-												<a href="#" class="iconify">
-													<i class="icon-cursor-move"></i>
-													Jurnal </a>
-											</li>
+
 
 										</ul>
 									</div>
+
+
 								</div>
 							</div>
 						</li>
