--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <script src='./assets/service/akun.service.js' type="text/javascript"></script>
 <script src='./assets/service/transaksi.service.js' type="text/javascript"></script>
 <script src='./assets/service/stok.service.js' type="text/javascript"></script>
+<script src='./assets/service/nasabah.service.js' type="text/javascript"></script>
 
 <script src="./views/login/login.controller.js"></script>
 <script src="./views/home/home.controller.js"></script>
@@ -169,7 +170,9 @@ License: You must have a valid license purchased only from themeforest(the above
 <script src='./views/transaksi/transaksi.mdl.ctl.js' type="text/javascript"></script>
 <script src='./views/test/test.controller.js' type="text/javascript"></script>
 <script src='./views/ptransaksi/ptransaksi.controller.js' type="text/javascript"></script>
-
+<script src='./views/r_stok/rstok.controller.js' type="text/javascript"></script>
+<script src='./views/nasabah/nasabah.controller.js' type="text/javascript"></script>
+<script src='./views/nasabah/nasabah.mdl.ctl.js' type="text/javascript"></script>
 
 <script type="text/javascript">
     /* Init Metronic's core jquery plugins and layout scripts */
