--- a/assets/tpl/header.html
+++ b/assets/tpl/header.html
@@ -99,7 +99,7 @@
 													Akun</a>
 											</li>
 											<li>
-												<a ui-sref="test" class="iconify">
+												<a ui-sref="home.test" class="iconify">
 													<i class="icon-puzzle"></i>
 													Test</a>
 											</li>
