--- a/assets/tpl/header.html
+++ b/assets/tpl/header.html
@@ -148,7 +148,11 @@
 													<i class="icon-puzzle"></i>
 													Stok </a>
 											</li>
-
+											<li>
+												<a ui-sref="home.rca" class="iconify">
+													<i class="icon-puzzle"></i>
+													Cost Averaging </a>
+											</li>
 
 										</ul>
 									</div>
