--- a/assets/tpl/header.html
+++ b/assets/tpl/header.html
@@ -153,6 +153,12 @@
 													<i class="icon-puzzle"></i>
 													Cost Averaging </a>
 											</li>
+											<li>
+												<a ui-sref="home.sim" class="iconify">
+													<i class="icon-puzzle"></i>
+													Simulation </a>
+											</li>
+
 
 										</ul>
 									</div>
