--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--
 Name : Index.html
 Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 3.3.5
@@ -93,7 +93,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 <!-- BEGIN FOOTER -->
 <div class="copyright">
-    2015 &copy; Homeeah Valas
+    2016a &copy; Homeeah Valas
 </div>
 <!-- END FOOTER -->
 
