--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 <!-- BEGIN FOOTER -->
 <div class="copyright">
-    2016a &copy; Homeeah Valas
+    2016 &copy; Homeeah Valas
 </div>
 <!-- END FOOTER -->
 
