--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <script src='./views/nasabah/nasabah.mdl.ctl.js' type="text/javascript"></script>
 <script src='./views/r_dca/rca.controller.js' type="text/javascript"></script>
 <script src='./views/r_sim/rsim.controller.js' type="text/javascript"></script>
+    <script src='./views/pnasabahid/pnasabahid.controller.js' type="text/javascript"></script>
 
 <script type="text/javascript">
     /* Init Metronic's core jquery plugins and layout scripts */
